--- a/clean-node-api/tsconfig.json
+++ b/clean-node-api/tsconfig.json
@@ -1,9 +1,21 @@
 {
   "compilerOptions": {
     "outDir": "./dist",
-    "module": "CommonJS",
-    "target": "ES2019",
+    "module": "commonjs",
+    "target": "es2019",
     "esModuleInterop": true,
-    "allowJs": true
-  }
+    "allowJs": true,
+    "sourceMap": true,
+    "rootDir": "src",
+    "baseUrl": "src",
+    "paths": {
+      "@/*": [
+        "*"
+      ]
+    }
+  },
+  "include": [
+    "src"
+  ],
+  "exclude": []
 }
