--- a/clean-node-api/package.json
+++ b/clean-node-api/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/jest": "^25.2.3",
     "@types/node": "^14.0.11",
     "@types/typescript": "^2.0.0",
     "@typescript-eslint/eslint-plugin": "^2.34.0",
@@ -21,7 +22,9 @@
     "eslint-plugin-standard": "^4.0.1",
     "git-commit-msg-linter": "^2.4.2",
     "husky": "^4.2.5",
+    "jest": "^26.0.1",
     "lint-staged": "^10.2.9",
+    "ts-jest": "^26.1.0",
     "typescript": "^3.9.5"
   }
 }
