--- a/clean-node-api/package.json
+++ b/clean-node-api/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
-    "test:staged": "jest"
+    "test": "jest --passWithNoTests",
+    "test:staged": "jest --passWithNoTests"
   },
   "keywords": [],
   "author": "",
@@ -14,9 +14,9 @@
     "@types/jest": "^25.2.3",
     "@types/node": "^14.0.11",
     "@types/typescript": "^2.0.0",
-    "@typescript-eslint/eslint-plugin": "^2.34.0",
-    "eslint": "^7.1.0",
-    "eslint-config-standard-with-typescript": "^18.0.2",
+    "@typescript-eslint/eslint-plugin": "^2.16.0",
+    "eslint": "^6.8.0",
+    "eslint-config-standard-with-typescript": "^11.0.1",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
@@ -26,6 +26,9 @@
     "jest": "^26.0.1",
     "lint-staged": "^10.2.9",
     "ts-jest": "^26.1.0",
-    "typescript": "^3.9.5"
+    "typescript": "^3.7.4"
+  },
+  "engines": {
+    "node": "12.x"
   }
 }
